[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/godot_mcp/dock.gd" id="1_ewo5g"]

[node name="MCP" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ewo5g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Model Context Protocol"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MCP Server: Not running"

[node name="ClientsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Connected clients: 0"

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "URL: http://localhost:8080/sse"
